create java.base test, use Records, rename main class